--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,23 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+solc = "0.8.18"
+optimizer = true
+optimizer_runs = 200
+fs_permissions = [{ access = "read", path = "./"}]
+remappings = [
+  '@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/',
+]
+
+[rpc_endpoints]
+# mainnets
+eth = "wss://ethereum.publicnode.com"
+plg = "https://polygon-bor.publicnode.com"
+arb = "wss://arbitrum-one.publicnode.com"
+opt = "wss://optimism.publicnode.com"
+# testnets
+goerli = "https://ethereum-goerli.publicnode.com"
+mumbai = "https://polygon-mumbai-bor.publicnode.com"
+
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
