--- a/foundry.toml
+++ b/foundry.toml
@@ -8,6 +8,7 @@ optimizer_runs = 200
 fs_permissions = [{ access = "read", path = "./"}]
 remappings = [
   '@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/',
+  '@solmate-utils/=lib/solmate/src/utils/',
 ]
 
 [rpc_endpoints]
