--- a/compiler_config.json
+++ b/compiler_config.json
@@ -1,9 +1,10 @@
 {
 	"language": "Solidity",
 	"settings": {
+		"viaIR": true,
 		"optimizer": {
 			"enabled": true,
-			"runs": 10
+			"runs": 200
 		},
 		"outputSelection": {
 			"*": {
