--- a/foundry.toml
+++ b/foundry.toml
@@ -1,5 +1,5 @@
 [profile.default]
-src = "src"
+src = "contracts"
 out = "out"
 libs = ["lib"]
 solc = "0.8.18"
@@ -13,12 +13,8 @@ remappings = [
 
 [rpc_endpoints]
 # mainnets
-eth = "wss://ethereum.publicnode.com"
 plg = "https://polygon-bor.publicnode.com"
-arb = "wss://arbitrum-one.publicnode.com"
-opt = "wss://optimism.publicnode.com"
 # testnets
-goerli = "https://ethereum-goerli.publicnode.com"
 mumbai = "https://polygon-mumbai-bor.publicnode.com"
 
 
