--- a/foundry.toml
+++ b/foundry.toml
@@ -2,17 +2,16 @@
 src = "contracts"
 out = "out"
 libs = ["lib"]
-solc = "0.8.18"
-via_ir = true
+solc = "0.8.20"
 optimizer = true
-optimizer_runs = 221
+optimizer_runs = 200
 fs_permissions = [{ access = "read", path = "./"}]
 
 [rpc_endpoints]
 # mainnets
-plg = "https://polygon-bor.publicnode.com"
+zkevm = "https://polygon-zkevm.drpc.org"
 # testnets
-mumbai = "https://polygon-mumbai-bor.publicnode.com"
+cardona = "https://rpc.cardona.zkevm-rpc.com"
 
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
