--- a/foundry.toml
+++ b/foundry.toml
@@ -3,7 +3,7 @@ src = "contracts"
 out = "out"
 libs = ["lib"]
 solc = "0.8.20"
-via_ir = true
+# via_ir = true
 optimizer = true
 optimizer_runs = 200
 fs_permissions = [{ access = "read", path = "./"}]
@@ -12,7 +12,7 @@ fs_permissions = [{ access = "read", path = "./"}]
 # mainnets
 zkevm = "https://polygon-zkevm.drpc.org"
 # testnets
-cardona = "https://rpc.cardona.zkevm-rpc.com"
+cardona = "https://polygon-zkevm-cardona.blockpi.network/v1/rpc/public"
 
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
