--- a/foundry.toml
+++ b/foundry.toml
@@ -7,7 +7,7 @@ solc = "0.8.20"
 optimizer = true
 optimizer_runs = 200
 fs_permissions = [{ access = "read", path = "./"}]
-
+evm_version = "shanghai"
 [rpc_endpoints]
 # mainnets
 zkevm = "https://polygon-zkevm.drpc.org"
