--- a/foundry.toml
+++ b/foundry.toml
@@ -3,7 +3,7 @@ src = "contracts"
 out = "out"
 libs = ["lib"]
 solc = "0.8.20"
-# via_ir = true
+via_ir = true
 optimizer = true
 optimizer_runs = 7
 fs_permissions = [{ access = "read", path = "./"}]
